--- a/farmstory/src/main/resources/application.properties
+++ b/farmstory/src/main/resources/application.properties
@@ -11,8 +11,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/studydb
 spring.datasource.username=root
 spring.datasource.password=1234
 
-# Mybatis setting
-mybatis.mapper-locations=classpath:mappers/**/*.xml
+# JPA setting
+
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=update
 
 # Log setting
 logging.level.root=info
