--- a/farmstory/src/main/resources/application.properties
+++ b/farmstory/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=farmstory
 # basic setting
 spring.devtools.livereload.enabled=true
 server.servlet.context-path=/farmstory
-server.port=8083
+server.port=8081
 
 # DataSource setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/studydb
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=tkfkdgka12!
 
 # JPA setting
 
