--- a/farmstory/src/main/resources/application.properties
+++ b/farmstory/src/main/resources/application.properties
@@ -25,3 +25,5 @@ logging.file.name=/logs/farmstory.log
 logging.level.jdbc.sqlonly=debug
 logging.level.jdbc.sqltiming=debug
 logging.level.jdbc.resultsettable=debug
+
+# File Upload
