--- a/farmstory/src/main/resources/application-prob.properties
+++ b/farmstory/src/main/resources/application-prob.properties
@@ -7,7 +7,7 @@ server.port=8081
 
 # DataSource setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/farmstory
+spring.datasource.url=jdbc:mysql://localhost:3306/studydb
 spring.datasource.username=root
 spring.datasource.password=1234
 
@@ -26,3 +26,4 @@ logging.level.jdbc.sqlonly=debug
 logging.level.jdbc.sqltiming=debug
 logging.level.jdbc.resultsettable=debug
 
+# File Upload
